@@ -315,6 +315,7 @@ static unsigned char default_emacs_like_info_keys[] =
   '8', NUL,                       A_info_menu_digit,
   '9', NUL,                       A_info_menu_digit,
   '<', NUL,                       A_info_first_node,
+  '=', NUL,                       A_info_display_file,
   '>', NUL,                       A_info_last_node,
   '?', NUL,                       A_info_get_help_window,
   '[', NUL,                       A_info_global_prev_node,
@@ -571,6 +572,7 @@ static unsigned char default_vi_like_info_keys[] =
   '8', NUL,                       A_info_add_digit_to_numeric_arg,
   '9', NUL,                       A_info_add_digit_to_numeric_arg,
   '-', NUL,                       A_info_add_digit_to_numeric_arg,
+  '=', NUL,                       A_info_display_file,
   TAB, NUL,                       A_info_move_to_next_xref,
   LFD, NUL,                       A_info_down_line,
   RET, NUL,                       A_info_down_line,
